<resources>
    <string name="app_name">MAppMedia</string>
    <string name="main_searchview_title">Suche</string>
    <string name="all_settings_title">Einstellungen</string>

    <string name="main_age_restriction_value">FSK %1$d</string>
    <string name="all_no_value_set">k.A.</string>
    <string name="main_running_time_value">%1$d Min.</string>

    <string name="versatile_dialog_add_movie_title">Neuer Film</string>
    <string name="versatile_dialog_edit_movie_title">Film editieren</string>

    <string name="versatile_dialog_add_movie_pos_button">Anlegen</string>
    <string name="versatile_dialog_edit_movie_pos_button">Bearbeiten</string>

    <string name="versatile_dialog_neg_button">Abbrechen</string>

    <string name="versatile_dialog_input_title">Titel</string>
    <string name="versatile_dialog_input_title_error_hint">Titel eingeben</string>
    <string name="versatile_dialog_input_type">Typ</string>
    <string name="versatile_dialog_input_location">Ablageort</string>
    <string name="versatile_dialog_input_location_error_hint">Ablageort eingeben</string>
    <string name="versatile_dialog_input_artist">Künstler/Regisseur</string>
    <string name="versatile_dialog_input_genre">Genre</string>
    <string name="versatile_dialog_input_release_year">Jahr</string>
    <string name="versatile_dialog_input_age_restriction">Altersfreigabe</string>
    <string name="versatile_dialog_input_running_time">Laufzeit</string>

    <string name="main_media_item_dialog_title">Optionen</string>
    <string-array name="main_media_item_dialog_options">
        <item>Bearbeiten</item>
        <item>Löschen</item>
    </string-array>

    <string name="main_media_remove_dialog_title">Medium entfernen</string>
    <string name="main_media_remove_dialog_message">Wollen Sie wirklich %1$s entfernen?</string>
    <string name="main_media_remove_dialog_pos_button">Löschen</string>
    <string name="main_media_remove_dialog_neg_button">Abbrechen</string>

    <string-array name="versatile_media_dialog_movie_genres">
        <item>@string/all_no_value_set</item>
        <item>Abenteuer</item>
        <item>Action</item>
        <item>Biografie</item>
        <item>Drama</item>
        <item>Erotik</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Komödie</item>
        <item>Krieg</item>
        <item>Kriminal</item>
        <item>Liebe</item>
        <item>Martial-Arts</item>
        <item>Musik</item>
        <item>Porno</item>
        <item>Road</item>
        <item>Sci-Fi</item>
        <item>Sport</item>
        <item>Thriller</item>
        <item>Western</item>
    </string-array>


    <string name="main_preference_ftp_category_title">FTP-Einstellungen</string>

    <string name="main_preference_ftp_host_title">Host</string>
    <string name="main_preference_ftp_host_summary">Legt die Hostadresse des FTP-Servers fest</string>

    <string name="main_preference_ftp_user_title">Benutzer</string>
    <string name="main_preference_ftp_user_summary">Legt den FTP-Benutzer fest</string>

    <string name="main_preference_ftp_password_title">Passwort</string>
    <string name="main_preference_ftp_password_summary">Legt das Passwort des FTP-Benutzers fest</string>

    <string name="main_preference_ftp_remote_title">Zieldatei</string>
    <string name="main_preference_ftp_remote_summary">Legt die Zieldatei auf dem FTP-Server fest</string>

    <string name="main_preference_ftp_load_title">Laden beim Starten</string>
    <string name="main_preference_ftp_load_summary">
        Lädt die Zieldatei vom angegebenen FTP-Server herunter und lädt die Datenbank, sobald die Applikation gestartet wurde
    </string>


</resources>
